@@ -1,3 +1,11 @@
+2015-01-29  Ola Jeppsson  <ola@adapteva.com>
+
+	* src/e-hal/src/epiphany-hal.c (static int
+	disable_nsw_elinks): Insert delays between write to E_SYS_*
+	registers.
+	(static int enable_clock_gating): Likewise.
+	(int e_reset_system): Likewise.
+
 2015-01-23  Ola Jeppsson  <ola@adapteva.com>
 
 	* src/e-hal/src/epiphany-hal.c (static int
